--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
   <head>
     <title>YIXIU</title>
     <link rel="icon" type="image/png" href="./public/favicon.ico" />
@@ -27,7 +27,6 @@
     <div id="wrapper">
       <div id="bg" style="display: none" class="phone-class"></div>
       <video
-        src="https://cos.zhangyujie.top/ju.mp4"
         class="pc-class"
         loop
         width="100%"
@@ -36,20 +35,20 @@
         muted="muted"
         cue-before:none;
         id="sp"
-      ></video>
+      >
+        <source
+          src="https://yixiu1043.github.io/public/video-1.mp4"
+          type="video/mp4"
+        />
+      </video>
       <div id="overlay"></div>
       <div id="main">
         <!-- Header -->
         <header id="header">
           <h1>YIXIU</h1>
-          <!-- <p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p> -->
           <p>STAY HUNGRY &nbsp;&bull;&nbsp; STAY FOOLISH</p>
           <nav>
             <ul>
-              <!-- <li><a href="./blog" target="_blank" class="fa fa-home"><span>博客主页</span></a></li>
-							<li><a href="./pic" target="_blank" class="fa fa-picture-o"><span>壁纸</span></a></li>
-							<li><a href="https://zyj_yida.gitee.io/source/game/" target="_blank" class="fa fa-gamepad"><span>娱乐</span></a></li>
-							<li><a href="./blog/categories/Others/" target="_blank" class="fa fa-star"><span>收藏</span></a></li>		 -->
               <li>
                 <a
                   href="https://yixiu1043.github.io/blog/"
@@ -95,12 +94,14 @@
               class="ival"
               style="margin-right: 2rem"
               id="voice"
+              alt=""
             />
             <img
               src="./public/play.png"
               onclick="ispaly()"
               class="ival"
               id="bofang"
+              alt=""
             />
             <img
               src="./public/next.png"
@@ -108,6 +109,7 @@
               class="ival"
               style="margin-left: 2rem"
               id="next"
+              alt=""
             />
           </div>
           <!-- <div><a href="https://beian.miit.gov.cn/" style="border-bottom: none;"><span class="copyright" style="font-size: 1rem;font-family: Regular, cursive;">&copy; 蜀ICP备2020027142号-1</span></a></div> -->
@@ -117,9 +119,12 @@
   </body>
   <script>
     const srcs = [
-      "https://cos.zhangyujie.top/ju.mp4",
-      "https://cos.zhangyujie.top/ju2.mp4",
-      "https://cos.zhangyujie.top/lin.mp4",
+      // "https://cos.zhangyujie.top/ju.mp4",
+      // "https://cos.zhangyujie.top/ju2.mp4",
+      // "https://cos.zhangyujie.top/lin.mp4",
+      "https://yixiu1043.github.io//public/video-1.mp4",
+      "https://yixiu1043.github.io//public/video-2.mp4",
+      "https://yixiu1043.github.io//public/video-3.mp4",
     ];
     function changeVal() {
       var voice = document.querySelector("#voice");
