--- a/index.html
+++ b/index.html
@@ -25,22 +25,18 @@
   </head>
   <body class="loading">
     <div id="wrapper">
-      <div id="bg" style="display: none" class="phone-class"></div>
+      <!-- <div id="bg" style="display: none" class="phone-class"></div> -->
       <video
+        src="https://yixiu1043.github.io/public/video-1.mp4"
         class="pc-class"
         loop
         width="100%"
-        height="110%"
+        height="100%"
         autoplay="autoplay"
         muted="muted"
         cue-before:none;
         id="sp"
-      >
-        <source
-          src="https://yixiu1043.github.io/public/video-1.mp4"
-          type="video/mp4"
-        />
-      </video>
+      ></video>
       <div id="overlay"></div>
       <div id="main">
         <!-- Header -->
@@ -122,9 +118,9 @@
       // "https://cos.zhangyujie.top/ju.mp4",
       // "https://cos.zhangyujie.top/ju2.mp4",
       // "https://cos.zhangyujie.top/lin.mp4",
-      "https://yixiu1043.github.io//public/video-1.mp4",
-      "https://yixiu1043.github.io//public/video-2.mp4",
-      "https://yixiu1043.github.io//public/video-3.mp4",
+      "https://yixiu1043.github.io/public/video-1.mp4",
+      "https://yixiu1043.github.io/public/video-2.mp4",
+      "https://yixiu1043.github.io/public/video-3.mp4",
     ];
     function changeVal() {
       var voice = document.querySelector("#voice");
@@ -169,17 +165,15 @@
       object-fit: cover;
     }
     @media (max-width: 450px) {
-      .pc-class {
+      /* .pc-class {
         display: none;
-      }
-      .phone-class {
+      } */
+      /* .phone-class {
         display: block !important;
-        background-size: 1500px auto !important;
-        width: 1500px !important;
-      }
-      .ival {
+      } */
+      /* .ival {
         display: none;
-      }
+      } */
     }
 
     .ival {
