--- a/index.html
+++ b/index.html
@@ -29,24 +29,6 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
   </head>
   <body class="loading">
-    <iframe
-      src="https://tools.fiverr.com?searchbox-iframe=1&amp;affid=636334"
-      border="0"
-      scrolling="no"
-      height="253px"
-      width="100%"
-      style="
-        border: 0px;
-        overflow: hidden;
-        width: 1143px;
-        max-width: 280px;
-        height: 253px;
-        box-shadow: rgba(17, 17, 17, 0.12) 0px 16px 32px;
-      "
-      class="fasb-iframe-searchbox-widget"
-      data-origwidth="100%"
-      data-origheight="253px"
-    ></iframe>
     <div id="wrapper">
       <!-- <div id="bg" style="display: none" class="phone-class"></div> -->
       <video
@@ -92,14 +74,14 @@
                   ><span>娱乐</span></a
                 >
               </li>
-              <!-- <li>
+              <li>
                 <a
-                  href="https://zhangyujie.top/blog/categories/Others/"
+                  href="./fiverr.html"
                   target="_blank"
-                  class="fa fa-star"
-                  ><span>收藏</span></a
+                  class="fa fa-handshake-o"
+                  ><span>fiverr</span></a
                 >
-              </li> -->
+              </li>
             </ul>
           </nav>
         </header>
@@ -202,13 +184,6 @@
     .ival {
       height: 25px;
       width: auto;
-    }
-
-    .fasb-iframe-searchbox-widget {
-      position: fixed;
-      top: 0;
-      right: 0;
-      z-index: 1;
     }
   </style>
 </html>
